--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -16,7 +16,7 @@
 	<nav>
 		<ul>
 			<li><a href="./index.html">projets</a></li>
-			<li>contact</li>
+			<li><a href="./index.html#contact">contact</a></li>
 			<li>login</li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
@@ -44,6 +44,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./js/login.js"></script>
+<script src="./assets/js/login.js"></script>
 </body>
 </html>
