modale implantez avec recuperation des images et fermeture sur x ou a cote de la modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -66,6 +66,18 @@
 			<input type="submit" value="Envoyer">
 		</form>
 	</section>
+
+	<aside class="modal" id="modal">
+		<div class="modal-container">
+			<button class="modal-return-btn hidden" id="modal-return-btn" ><i class="fa-solid fa-arrow-left-long"></i></button>
+			<button class="modal-close-btn" id="modal-close-btn" ><i class="fa-solid fa-xmark"></i></button>
+			<h3>Galerie photo</h3>
+			<div class="galleryModal" id="modal-inner"></div>
+			<button class="btn-ajouter">Ajouter une photo</button><br>
+			<button class="btn-supprimer" id="btn-postNewWork">Supprimer la galerie</button>
+		</div>
+	</aside>
+
 </main>
 
 <footer>
