--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,20 +67,20 @@
 		</form>
 	</section>
 
-	<aside class="modal" id="modal">
+	<aside class="modal">
 		<div class="modal-container">
-			<button class="modal-close-btn" id="modal-close-btn" ><i class="fa-solid fa-xmark"></i></button>
+			<button class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
 			<h3>Galerie photo</h3>
-			<div class="galleryModal" id="modal-inner"></div>
+			<div class="galleryModal"></div>
 			<button class="btn-ajouter">Ajouter une photo</button><br>
-			<button class="btn-supprimer" id="btn-postNewWork">Supprimer la galerie</button>
+			<button class="btn-supprimer">Supprimer la galerie</button>
 		</div>
 	</aside>
 
-	<aside class="modal" id="modal-two">
+	<aside class="modal modal-two">
 		<div class="modal-container">
-			<button class="modal-return-btn" id="modal-return-btn" ><i class="fa-solid fa-arrow-left-long"></i></button>
-			<button class="modal-close-btn" id="modal-close-btn" ><i class="fa-solid fa-xmark"></i></button>
+			<button class="modal-return-btn" ><i class="fa-solid fa-arrow-left-long"></i></button>
+			<button class="modal-two-close-btn"><i class="fa-solid fa-xmark"></i></button>
 			<h3>Ajout photo</h3>
 			<form id="formAddImage">
 				<div class="image-container">
