Tout commente et arrange le fonctionnement de la modale 2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -98,14 +98,12 @@
 					</div>
 					<span id="image-restriction">jpg, png : 4mo max</span>
 				</div>
-				<span id="error-image" class="error"></span>
 		
 				<div class="title">
 					<label for="title-input">Titre</label>
 					<input type="text" 
 						   name="title" 
 						   id="title-input">
-					<span id="error-title" class="error"></span>
 				</div>
 		
 				<div class="category">
@@ -116,9 +114,8 @@
 						<option value="2">Appartements</option>
 						<option value="3">Hotels & restaurants</option>
 					</select>
-					<span id="error-category" class="error"></span>
+					<span id="error-msg" class="error"></span>
 				</div>
-				
 				<input class="btn-valider" type="submit" value="Valider">
 				</form>
 			
