ajout du message validation d'envoi

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -22,7 +22,7 @@
     	<button>publier les changements</button>
 	</div>
 	<header>
-		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
 				<li><a href="#portfolio">projets</a> </li>
@@ -70,7 +70,7 @@
 
 	<aside class="modal">
 		<div class="modal-container">
-			<button class="modal-close-btn"><i class="fa-solid fa-xmark"></i></button>
+			<button class="modal-close-btn"><i class="fa-solid fa-xmark fa-xl"></i></button>
 			<h3>Galerie photo</h3>
 			<div class="galleryModal"></div>
 			<button class="btn-ajouter">Ajouter une photo</button><br>
@@ -80,14 +80,13 @@
 
 	<aside class="modal modal-two">
 		<div class="modal-container">
-			<button class="modal-return-btn" ><i class="fa-solid fa-arrow-left-long"></i></button>
-			<button class="modal-two-close-btn"><i class="fa-solid fa-xmark"></i></button>
+			<button class="modal-return-btn" ><i class="fa-solid fa-arrow-left-long fa-xl"></i></button>
+			<button class="modal-two-close-btn"><i class="fa-solid fa-xmark fa-xl"></i></button>
 			<h3>Ajout photo</h3>
 			<form id="form-new-works">
 				<div class="image-container">
 					<img id="example-img" src="./assets/icons/picture-svg.svg" alt="empty picture">
 					<img id="file-img" class="hidden" src="#" alt="your image">
-		
 					<div id="input-image-container">
 						<label class="file-label" for="img-input">+ Ajouter photo
 						<input type="file"
@@ -98,14 +97,12 @@
 					</div>
 					<span id="image-restriction">jpg, png : 4mo max</span>
 				</div>
-		
 				<div class="title">
 					<label for="title-input">Titre</label>
 					<input type="text" 
 						   name="title" 
 						   id="title-input">
 				</div>
-		
 				<div class="category">
 					<label for="category">Catégorie</label>
 					<select name="category" id="category">
@@ -117,8 +114,7 @@
 					<span id="error-msg" class="error"></span>
 				</div>
 				<input class="btn-valider" type="submit" value="Valider">
-				</form>
-			
+			</form>
 		</div>
 	</aside>
 
